purple text omg

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Hello World</h1>
 <iframe src="https://giphy.com/embed/Ja8ihKn1B3sA" width="395" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/dance-Ja8ihKn1B3sA">via GIPHY</a></p>
     <div class="purple">
-      <span>This text should be purple</span>
+      <span>This text should be purple, and it is!</span>
     </div>
 
     <button>Show me some animal trivia!</button>
