fun changes with horses

--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
   <body>
     <!-- TODO: Say something interesting in the heading tag... -->
     <h1>Hello World</h1>
-<iframe src="https://giphy.com/embed/Ja8ihKn1B3sA" width="395" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/dance-Ja8ihKn1B3sA">via GIPHY</a></p>
+<iframe src="https://giphy.com/embed/a0Zg8RJTB7UFW" width="480" height="291" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/horse-dressage-eventing-a0Zg8RJTB7UFW"></a></p>
     <div class="purple">
       <span>This text should be purple, and it is!</span>
     </div>
-
+    <p></p>
     <button>Show me some animal trivia!</button>
 
     <div id="results-area"></div>
     <div id="question-display"></div>
     <div id="answer-display"></div>
+    <img class="irc_mi" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Horse_riding_in_coca_cola_arena_-_melbourne_show_2005.jpg/1200px-Horse_riding_in_coca_cola_arena_-_melbourne_show_2005.jpg" alt="Image result for horse riding" onload="typeof google==='object'&amp;&amp;google.aft&amp;&amp;google.aft(this)" width="304" height="203" style="margin-top: 75px;">
+    <h3>Supreme horse.ifs for sale. $1.50 each</h3>
+    <p>Look how well they ride!</p>
   </body>
 </html>
